# poetry-urllib3-dep-resolution-repro

./: pyproject.toml
